# cf-template-rust

./: .gitignore  README.md  bacon.toml
.github/workflows/: validate-templates.yml
Deploy/docker/: .genignore  Dockerfile  Dockerfile.base  Dockerfile.liquid  cargo-generate.toml
Init/: Cargo.toml
Init/config/: quickstart.yml
Init/modules/hello-world/src/: config.rs  module.rs
Modules/: cargo-generate.toml
Modules/api-db-handler/: Cargo.toml  README.md
Modules/api-db-handler/sdk/: Cargo.toml
Modules/api-db-handler/sdk/src/: client.rs
Modules/api-db-handler/src/api/rest/handlers/: mod.rs  pokemon.rs
Modules/api-db-handler/src/api/rest/routes/: mod.rs  pokemon.rs
Modules/api-db-handler/src/domain/local_client/: client.rs  streaming.rs
Modules/api-db-handler/src/domain/service/: pokemon.rs
Modules/api-db-handler/src/infra/storage/: odata_mapper.rs
Modules/api-db-handler/src/infra/storage/entity/: mod.rs
Modules/background-worker/: Cargo.toml  cargo-generate.toml
Modules/rest-gateway/: Cargo.toml
Modules/rest-gateway/src/: module.rs
scripts/: validate-templates.sh
