[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace]
members = ["modules/hello-world"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"

[workspace.dependencies]
anyhow = { version = "1.0" }
cf-modkit = { version = "0.6.2" }

tokio = { version = "1.51.1", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

serde = { version = "1.0" }

