[package]
name = "api-db-handler-sdk"
version = "0.0.1"
edition = "2024"

[features]
default = []
odata = []

[dependencies]
# Core async trait helper exposed by ModKit
cf-modkit = { version = "0.6.2" }

# OData contract and pagination types
cf-modkit-odata = { version = "0.6.2" }
cf-modkit-sdk = { version = "0.6.2" }
cf-modkit-odata-macros = { version = "0.6.2" }

# Data model + errors
thiserror = "2.0"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.23", features = ["serde"] }

# Streaming trait type alias support
futures-core = "0.3"
